--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ header{
 }
 .log li{
 	list-style-type: none;
+	display: inline-block;
+}
+.log li:last-child{
+	margin-left: 60px;
 }
 .log a{
 	text-decoration: none;
@@ -36,7 +40,19 @@ header{
     padding: 10px;
     background-color: #FFDD00;
 }
+.center_suc{
+	margin: 17% 20% 0% 25%;
+    padding: 10px;
+    background-color: #4AB04A;
+}
 .center h2{
+	text-align: center;
+	margin: 20px;
+	color: #f0f0f0;
+	font-size: 70px;
+	font-family: 'RobotoBold';
+}
+.center_suc h2{
 	text-align: center;
 	margin: 20px;
 	color: #f0f0f0;
@@ -70,6 +86,36 @@ header{
 
 }
 .doregit input:hover{
+	color: white;
 	cursor: pointer;
 	background-color: #0089D8;
+}
+.profile{
+	font-family: 'RalewayRegular';
+	width: 50%;
+	margin-top: 20px;
+	margin-left: 20px;
+}
+.img{
+	float: left;
+}
+.img img{
+	width: 100px;
+	height: 110px;
+}
+.info{
+	float: left;
+}
+.info li{
+	list-style-type: none;
+	
+}
+.log img {
+	margin-right: 10px;
+    border-radius: 30px;
+    float: left;
+    width: 54px;
+    height: 50px;
+    display: block;
+    margin-top: -10px;
 }
